--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -10,6 +10,7 @@ body {
     background: #573dec;
     color: white;
     font-size: 24px;
+    text-shadow: 0px 0px 8px black;
 }
 
 /* PAGE CONTENT */
