--- a/views/doesnotexist.ejs
+++ b/views/doesnotexist.ejs
@@ -20,7 +20,7 @@
 
   </div>
   <div class="footer">
-    <p>hello :) <span id="github-url" ><a id="github-url" href="https://github.com/ghendersonnc" target="_blank"><i class="fa fa-github" style="font-size: 24px"></i></a></span></p>
+    <p>hello :) <span id="github-url" ><a id="github-url" href="https://github.com/ghendersonnc/pleasebeup" target="_blank"><i class="fa fa-github" style="font-size: 24px"></i></a></span></p>
   </div>
   <script>
     function redirect() {
