--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     </form>
   </div>
   <div class="footer">
-      <p>hello :) <span id="github-url" ><a id="github-url" href="https://github.com/ghendersonnc" target="_blank"><i class="fa fa-github" style="font-size: 24px"></i></a></span></p>
+      <p>hello :) <span id="github-url" ><a id="github-url" href="https://github.com/ghendersonnc/pleasebeup" target="_blank"><i class="fa fa-github" style="font-size: 24px"></i></a></span></p>
   </div>
   <script src="scripts/regex.js"></script>
 </body>
