--- a/views/doesnotexist.ejs
+++ b/views/doesnotexist.ejs
@@ -9,20 +9,16 @@
   <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
-  <div class="header">
-    <div id="title-div">
-      <h1 id="title-heading">Please Be Up</h1>
-    </div>
-  </div>
+  <%- include("./partials/header.ejs") %>
+
   <div class="content">
     <h1>Good news, everyone! There was no response.</h1>
     <p>That means the website probably does not exist.</p>
     <button onclick="redirect()">Back to Home</button>
 
   </div>
-  <div class="footer">
-    <p>hello :) <span id="github-url" ><a id="github-url" href="https://github.com/ghendersonnc/pleasebeup" target="_blank"><i class="fa fa-github" style="font-size: 24px"></i></a></span></p>
-  </div>
+  <%- include("./partials/footer.ejs") %>
+
   <script>
     function redirect() {
       window.location = "/";
