--- a/views/status.ejs
+++ b/views/status.ejs
@@ -9,11 +9,7 @@
   <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
-  <div class="header">
-    <div id="title-div">
-      <h1 id="title-heading">Please Be Up</h1>
-    </div>
-  </div>
+  <%- include("./partials/header.ejs") %>
   <div class="content">
     <h1 id="message"><%= message %></h1>
     <p id="sub"><%= sub %></p>
