--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -1,7 +1,11 @@
-body {
+
+
+html, body {
     font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
     margin: 0;
     background: white;
+    overflow-x: hidden;
 }
 
 /* HEADER */
@@ -24,6 +28,8 @@ body {
     font-size: 36px;
     text-align: center;
     border: none;
+    outline: none;
+    width: 75%;
 }
 
 .content > #app-form > #submit-button {
