--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,12 +13,12 @@
 
   <div class="content">
     <form id="app-form" action="/submit" onsubmit="checkInput(event)">
-      <input id="url-input" name="url" type="text" placeholder="website.com">
+      <input id="url-input" name="url" type="text" placeholder="website.com" onfocus="this.placeholder=''" onblur="this.placeholder='website.com'" autocomplete="off">
       <br>
       <input id="submit-button" type="submit" value="Please Be Up">
     </form>
   </div>
-
+  
   <%- include("./partials/footer.ejs") %>
   <script src="scripts/regex.js"></script>
 </body>
