Made input placeholder less ambiguous

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
   <div class="content">
     <form id="app-form" action="/submit" onsubmit="checkInput(event)">
-      <input id="url-input" name="url" type="text" placeholder="website.com" onfocus="this.placeholder=''" onblur="this.placeholder='website.com'" autocomplete="off">
+      <input id="url-input" name="url" type="text" placeholder="enter a URL" onfocus="this.placeholder=''" onblur="this.placeholder='enter a URL'" autocomplete="off">
 
       <input id="submit-button" type="submit" value="Please Be Up">
     </form>
